update footer part with background image and input style

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,6 @@
     document.getElementById("waves").classList.add("opacity-100");
     }, 500);
 
-    waves.triggerMouseMove();
+    // waves.triggerMouseMove();
   </script>
 </html>
